  - Increased default lock_timeout from 0.5 to 1 second in
    Mojo::Server::Prefork and Mojo::Server::Hypnotoad.
  - Improved Mojo::IOLoop performance significantly and reduced CPU usage when
    managing more than 10k concurrent connections.
  - Improved Mojolicious to be able to detect the current operating mode from
    the PLACK_ENV environment variable.
  - Improved Mojo::DOM::HTML performance.
  - Improved html_unescape performance in Mojo::Util.
  - Improved Mojolicious::Plugin::EPLRenderer to cache templates more
    efficiently.
  - Improved documentation.
  - Improved tests.
  - Fixed Perl 5.17.11+ compatibility.
  - Fixed a few authority bugs in Mojo::URL.
  - Fixed support for HEAD request method in Mojo::Server::CGI and
    Mojo::Server::PSGI.

3.97  2013-04-25
  - Added data attribute to Mojo::URL.
  - Improved compatibility with IO::Socket::SSL 1.87.
  - Improved Test::Mojo diagnostics messages.
  - Improved documentation.
  - Improved tests.
  - Fixed a few small timing bugs in WebSocket tests.

3.96  2013-04-22
  - Updated jQuery to version 2.0.
  - Updated prettify.js to version 4-Mar-2013.
  - Improved Mojo::URL to be able to contain scheme data for unknown schemes.
  - Improved form content generator for GET and HEAD requests. (jberger)
  - Improved default descriptions in Test::Mojo.
  - Improved documentation.
  - Improved tests.
  - Fixed host normalization bug in Mojo::URL.
  - Fixed small html_unescape bug in Mojo::Util.
  - Fixed small encoding bug in routes command.
  - Fixed a few small clone bugs.
  - Fixed a few small redirect and proxy connect bugs in
    Mojo::UserAgent::Transactor.
  - Fixed a few small method handling bugs in Mojo::Transaction::HTTP.

3.95  2013-04-12
  - Added finished_ok method to Test::Mojo.
  - Removed deprecated slurp_rel_file method from Mojo::Home.
  - Removed deprecated html_escape function from Mojo::Util.
  - Improved Mojo::Transaction::WebSocket with support for status codes and
    reasons.